--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "laravel-echo": "^1.2.2",
-    "pusher-js": "^4.0.0"
+    "pusher-js": "^4.0.0",
+    "vuex": "^2.1.2"
   }
 }
