--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ DB_PASSWORD={HERE}}
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=array
 SESSION_DRIVER=database
-QUEUE_DRIVER=redis
+QUEUE_DRIVER=database
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
