--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "laravel/framework": "5.3.*",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^2.6",
-        "kim/activity": "^1.1",
+        "kim/activity": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
