--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,5 @@ calvin_mcbride.txt
 tbyacoub.txt
 /java-server
 /nbproject/private/
-<<<<<<< HEAD
 /.phpintel/
-=======
-/.phpintel
->>>>>>> 8064a3192112e83eaefa0c3d6672250bcf86dbd8
+/nbproject/
