--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_KEY=base64:LNMj2sFEfifw67al+Ch1Qj2HJ0nxVMLeOA1u+dDXKaE=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
+APP_TIMEZONE=America/Chicago
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
