--- a/.env.example
+++ b/.env.example
@@ -6,15 +6,15 @@ APP_URL=http://localhost
 APP_TIMEZONE=America/Chicago
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql.cs.iastate.edu
 DB_PORT=3306
-DB_DATABASE={HERE}}
-DB_USERNAME={HERE}}
-DB_PASSWORD={HERE}}
+DB_DATABASE=db309ak5
+DB_USERNAME=dbu309sr5
+DB_PASSWORD=NDUyNDcwMmNi
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=array
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 QUEUE_DRIVER=database
 
 REDIS_HOST=127.0.0.1
@@ -28,9 +28,6 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID={{HERE}}
-PUSHER_APP_KEY={HERE}}
-PUSHER_APP_SECRET={HERE}}
-
-// also go to ./resources/assets/js/bootstrap.js
-// at the end of the file replace the key value with your pusher key
+PUSHER_APP_ID=295738
+PUSHER_APP_KEY=eee2849dcc0cf30eb46c
+PUSHER_APP_SECRET=8d76f7a524d04dade83c
