--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ DB_CONNECTION=mysql
 DB_HOST=mysql.cs.iastate.edu
 DB_PORT=3306
 DB_DATABASE=db309ak5
-DB_USERNAME=dbu309sr5
+DB_USERNAME=dbu309ak5
 DB_PASSWORD=NDUyNDcwMmNi
 
 BROADCAST_DRIVER=pusher
