--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,15 @@
         "laravel/framework": "5.3.*",
         "pusher/pusher-php-server": "^2.6",
         "kim/activity": "^1.1",
-        "phpdocumentor/phpdocumentor": "2.*"
+        "phpdocumentor/phpdocumentor": "2.*",
+        "zizaco/entrust": "5.2.x-dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*",
-        "zizaco/entrust": "5.2.x-dev"
+        "symfony/dom-crawler": "3.1.*"
     },
     "autoload": {
         "classmap": [
