--- a/composer.json
+++ b/composer.json
@@ -40,10 +40,12 @@
             "php artisan key:generate"
         ],
         "post-install-cmd": [
+            "php artisan vendor:publish",
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan optimize"
         ],
         "post-update-cmd": [
+            "php artisan vendor:publish",
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
         ]
