--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,20 @@
             "tests/TestCase.php"
         ]
     },
+    "scripts": {
+        "post-root-package-install": [
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "php artisan key:generate"
+        ],
+        "post-install-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
+        ],
+        "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+        ]
+    },
     "config": {
         "preferred-install": "dist"
     }
