--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:LNMj2sFEfifw67al+Ch1Qj2HJ0nxVMLeOA1u+dDXKaE=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 APP_TIMEZONE=America/Chicago
