--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_KEY=base64:LNMj2sFEfifw67al+Ch1Qj2HJ0nxVMLeOA1u+dDXKaE=
+APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
